# user-api

./: .env  Cargo.toml  diesel.toml  docker-compose.yml
migrations/2025-01-12-005027_create_user_table/: up.sql
src/: main.rs  schema.rs
src/application/dto/: create_user_dto.rs  create_user_input_dto.rs  create_user_output_dto.rs  delete_user_input_dto.rs  delete_user_output_dto.rs  mod.rs  read_user_input_dto.rs  read_user_output_dto.rs  update_user_input_dto.rs  update_user_output_dto.rs  user_response_dto.rs
src/application/use_cases/: create_user.rs  delete_user.rs  get_all_users.rs  get_user.rs  mod.rs  read_all_users.rs  read_user.rs  remove_user.rs  update_user.rs
src/config/: database_config.rs  env.rs  mod.rs  settings.rs
src/core/: mod.rs
src/core/domain/: mod.rs  status.rs  user.rs
src/core/repositories/: mod.rs  status_repository.rs  user_repository.rs
src/core/services/: mod.rs  status_service.rs  status_service_impl.rs  user_service.rs  user_service_impl.rs
src/infrastructure/database/: mod.rs
src/infrastructure/database/factories/: mod.rs  status_repository_factory.rs  user_repository_factory.rs
src/infrastructure/database/memory/: memory_status_repository.rs  memory_user_repository.rs  mod.rs
src/infrastructure/database/postgres/: database_manager.rs  mod.rs  postgres_status_repository.rs  postgres_user_repository.rs
src/presentation/controllers/: mod.rs  user_controller.rs
src/presentation/controllers/status/: get_status.rs  mod.rs
src/test_orchestrator/: create_pool.rs  mod.rs  startup.rs
tests/: mod.rs  status.rs
(+12 files in other folders)
